--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,8 @@ footer {
     font-size: .8em;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
+ul.posts {
+    margin: 20px auto 40px;
     font-size: 1.5em;
 }
 
@@ -77,8 +77,8 @@ ul.posts li {
     background-color: #777;
 }
 
-* {
-        box-sizing: border-box; 
+{
+        box-sizing: border-box;
       }
       .img-container {
         float: left;
@@ -106,10 +106,6 @@ ul.posts li {
     height: 80%;
     position: relative;
   background-color: white;
-    background-image: url("https://u.tfstatic.com/restaurant_photos/073/210073/169/612/nori-sushi-bar-roll-6989b.jpg");
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: 650px,200px;
   padding: 20px;
   border: 5px solid #aaa;
   width: 80%;
@@ -171,7 +167,7 @@ button:hover{
 /* Modal Content */
 /* Add Animation */
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
+  from {top:-300px; opacity:0}
   to {top:0; opacity:1}
 }
 
@@ -250,7 +246,7 @@ img.onclick = function() {
   grid-gap: calc(var(--gutter) / 2);
   grid-template-columns: 10px repeat(var(--total), calc(50% - var(--gutter) * 2)) 10px;
   grid-template-rows: minmax(150px, 1fr);
-  
+
   overflow-x: scroll;
   scroll-snap-type: x proximity;
   padding-bottom: calc(.75 * var(--gutter));
@@ -365,3 +361,193 @@ body{
     transform: rotate(90deg) translateY(80px);
     transform-origin: right top;
 }*/
+
+#myform {
+    text-align: center;
+    padding: 5px;
+    border: 1px dotted #ccc;
+    margin: 2%;
+}
+.qty {
+    width: 40px;
+    height: 25px;
+    text-align: center;
+}
+input.qtyplus { width:25px; height:25px;}
+input.qtyminus { width:25px; height:25px;}
+
+a:link {
+          color: green;
+          background-color: transparent;
+          text-decoration: none;
+      }
+      a:hover {
+          color: red;
+          background-color: transparent;
+          text-decoration: underline;
+      }
+      a:active {
+          color: blue;
+          background-color: transparent;
+          text-decoration: underline;
+      }
+      
+       .Chefmodal {
+                display: none;
+                position: fixed; /* Stay in place */
+                z-index: 1; /* Sit on top */
+                padding-top: 100px; /* Location of the box */
+                left: 0;
+                top: 0;
+                width: 100%; /* Full width */
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            }
+            
+            /*Modal Content */
+            /* Modal Content */
+
+            .Chefmodal-content {
+                background-color: white;
+                margin: auto;
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%;
+            }
+      /* The Close Button */
+            .Chefclose {
+                color: #aaaaaa;
+                float: right;
+                font-size: 50px;
+                font-weight: bold;
+            }
+            .Chefclose:hover,
+            .Chefclose:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
+            
+      
+        /*CallModal */
+        /*call button */
+      .Callbutton {
+          background-color: #4CAF50;
+          border: none;
+          color: black;
+          padding: 30px 90px;
+          text-align: center;
+          font-size: 16px;
+          cursor: pointer;
+      }
+      .Callbutton:hover {
+          background-color: green;
+      }
+      
+      .Callmodal {
+                display: none;
+                position: fixed; /* Stay in place */
+                z-index: 1; /* Sit on top */
+                padding-top: 100px; /* Location of the box */
+                left: 0;
+                top: 0;
+                width: 100%; /* Full width */
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            }
+            
+         
+            .Callmodal-content {
+                background-color: #fefefe;
+                margin: auto;
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%;
+            }
+            /* The CallClose Button */
+            .Callclose {
+                color: #aaaaaa;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
+            .Callclose:hover,
+            .Callclose:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
+            
+      
+      
+      /*Review Button*/
+      .Reviewbutton {
+          background-color: red;
+          border: none;
+          color: black;
+          padding: 30px 90px;
+          text-align: center;
+          font-size: 16px;
+          cursor: pointer;
+          
+      }
+      .Reviewbutton:hover {
+          background-color: red;
+      }
+      .ReviewModal {
+                display: none;
+                position: fixed; /* Stay in place */
+                z-index: 1; /* Sit on top */
+                padding-top: 100px; /* Location of the box */
+                left: 0;
+                top: 0;
+                width: 100%; /* Full width */
+                height: 100%; /* Full height */
+                overflow: auto; /* Enable scroll if needed */
+                background-color: rgb(0,0,0); /* Fallback color */
+                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+            }
+            
+            /*Modal Content */
+            /* Modal Content */
+
+            .ReviewModal-content {
+                background-color: white;
+                margin: auto;
+                padding: 20px;
+                border: 1px solid #888;
+                width: 80%;
+            }
+      /* The Review Close Button */
+            .Reviewclose {
+                color: #aaaaaa;
+                float: right;
+                font-size: 28px;
+                font-weight: bold;
+            }
+            .Reviewclose:hover,
+            .Reviewclose:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
+      
+      
+      
+#myform {
+    text-align: center;
+    padding: 5px;
+    border: 1px dotted #ccc;
+    margin: 2%;
+}
+.qty {
+    width: 40px;
+    height: 25px;
+    text-align: center;
+}
+input.qtyplus { width:25px; height:25px;}
+input.qtyminus { width:25px; height:25px;}
