--- a/css/mycss.css
+++ b/css/mycss.css
@@ -38,15 +38,15 @@ a:link {
                 width: 100%; /* Full width */
                 height: 100%; /* Full height */
                 overflow: auto; /* Enable scroll if needed */
-                background-color: rgb(0,0,0); /* Fallback color */
-                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+                background-color: white; /* Fallback color */
+                background-color: grey; /* Black w/ opacity */
             }
             
             /*Modal Content */
             /* Modal Content */
 
             .modal-content {
-                background-color: #111111;
+                background-color: aliceblue;
                 margin: auto;
                 padding: 20px;
                 border: 1px solid #888;
@@ -54,7 +54,7 @@ a:link {
             }
       /* The Close Button */
             .close {
-                color: #aaaaaa;
+                color: blue;
                 float: right;
                 font-size: 50px;
                 font-weight: bold;
@@ -92,13 +92,13 @@ a:link {
                 width: 100%; /* Full width */
                 height: 100%; /* Full height */
                 overflow: auto; /* Enable scroll if needed */
-                background-color: rgb(0,0,0); /* Fallback color */
-                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+                background-color: aliceblue; /* Fallback color */
+                background-color: coral; /* Black w/ opacity */
             }
             
          
             .Callmodal-content {
-                background-color: #fefefe;
+                background-color: greenyellow;
                 margin: auto;
                 padding: 20px;
                 border: 1px solid #888;
@@ -118,62 +118,63 @@ a:link {
                 cursor: pointer;
             }
             
-      
-      
-      /*Review Button*/
-      .Reviewbutton {
-          background-color: red;
-          border: none;
-          color: black;
-          padding: 30px 90px;
-          text-align: center;
-          font-size: 16px;
-          cursor: pointer;
-          
-      }
-      .Reviewbutton:hover {
-          background-color: red;
-      }
-      .ReviewModal {
-                display: none;
-                position: fixed; /* Stay in place */
-                z-index: 1; /* Sit on top */
-                padding-top: 100px; /* Location of the box */
-                left: 0;
-                top: 0;
-                width: 100%; /* Full width */
-                height: 100%; /* Full height */
-                overflow: auto; /* Enable scroll if needed */
-                background-color: rgb(0,0,0); /* Fallback color */
-                background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-            }
-            
-            /*Modal Content */
-            /* Modal Content */
+.staff{
+    text-align: center;
+    color: coral;
+}
 
-            .ReviewModal-content {
-                background-color: #111111;
-                margin: auto;
-                padding: 20px;
-                border: 1px solid #888;
-                width: 80%;
-            }
-      /* The Review Close Button */
-            .Reviewclose {
-                color: #aaaaaa;
-                float: right;
-                font-size: 28px;
-                font-weight: bold;
-            }
-            .Reviewclose:hover,
-            .Reviewclose:focus {
-                color: #000;
-                text-decoration: none;
-                cursor: pointer;
-            }
-      
-      
-      
+/*Review Button*/
+.Reviewbutton {
+    background-color: red;
+    border: none;
+    color: black;
+    padding: 30px 90px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.Reviewbutton:hover {
+    background-color: red;
+}
+
+.ReviewModal {
+    display: none;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.ReviewModal-content {
+    background-color: #111111;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+/* The Review Close Button */
+.Reviewclose {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.Reviewclose:hover,
+.Reviewclose:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
 #myform {
     text-align: center;
     padding: 5px;
