--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,22 @@ ul.posts li {
 }
 
 /*Clickable images*/
-
+.modal-content1 {
+    background-color: rgb(255,255,255);
+    margin: auto;
+    border: 1px;
+    height: 20%;
+    position: bottom;
+    background-color: white;
+    padding: 20px;
+    border: 5px solid #aaa;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
 /* Modal Content */
 .modal {
     display: none; /* Hidden by default */
@@ -250,7 +265,7 @@ input.qtyplus { width:25px; height:25px;}
 input.qtyminus { width:25px; height:25px;}
 
 a:link {
-    color: green;
+    color: white;
     background-color: transparent;
     text-decoration: none;
 }
@@ -337,7 +352,7 @@ a:active {
     left: 0;
     top: 0;
     width: 100%; /* Full width */
-    height: 90%; /* Full height */
+    height: 95%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
