--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,9 @@ p {
     line-height: 1.4em;
     color: #333;
 }
-
+p.c{
+    
+}
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
@@ -161,7 +163,7 @@ ul.posts li {
     background-color: white;
     padding: 20px;
     border: 5px solid #aaa;
-    width: 80%;
+    width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -331,13 +333,15 @@ a:active {
 /*General modal */
 /*call button */
 .Callbutton {
-    background-color: #4CAF50;
-    border: none;
-    color: black;
+    background-color: black;
+    border: 2px solid deepskyblue;
+    color: white;
     padding: 30px 90px;
     text-align: center;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 50px;
+    back
 }
 
 .Callbutton:hover {
@@ -373,7 +377,7 @@ a:active {
     background-color: white;
     padding: 20px;
     border: 5px solid #aaa;
-    width: 80%;
+    width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -399,17 +403,19 @@ a:active {
 
 /*Review Button*/
 .Reviewbutton {
-    background-color: red;
+    background-color: black;
     border: none;
-    color: black;
+    color: white;
     padding: 30px 90px;
     text-align: center;
     font-size: 16px;
     cursor: pointer;
+    border: 2px solid rgb(100, 250, 73);
+    border-radius: 50px
 }
 
 .Reviewbutton:hover {
-    background-color: red;
+    border: 2px solid deepskyblue;
 }
 
 .ReviewModal {
@@ -428,11 +434,19 @@ a:active {
 
 /*Review order Modal*/
 .ReviewModal-content {
-    background-color: white;
+    background-color: rgb(255,255,255);
     margin: auto;
+    border: 1px;
+    position: relative;
+    background-color: white;
     padding: 20px;
-    border: 1px solid #888;
+    border: 5px solid #aaa;
     width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
 }
 /* The Review Close Button */
 .Reviewclose {
