--- a/css/main.css
+++ b/css/main.css
@@ -1,554 +1,5 @@
 
 body {
-    margin: 60px auto;
-    width: 85%;
-    /*background: url("https://s3.amazonaws.com/getsocialnewsproduction/news/wp-content/uploads/2018/04/21081133/izakaya-munich.jpg");
-    background-repeat: no-repeat;
-    background-position: center;*/
-    background-color: 0xffffff;
-    height: 100%;
-}
-
-div.wrap {
-
-    word-wrap: break-word;
-
-}
-
-.bg {
-    /* The image used */
-    background-image: url("https://s3.amazonaws.com/getsocialnewsproduction/news/wp-content/uploads/2018/04/21081133/izakaya-munich.jpg");
-
-    /* Full height */
-    height: 100%;
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: repeat-x;
-    background-size: cover;
-    opacity: 0.3;
-}
-
-nav ul, footer ul {
-    font-family:'Brush Script MT', 'Calibri', 'erif';
-    padding: 15px 60px;
-    list-style: none;
-    font-weight: bold;
-    background: black;
-    
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a.norm:hover{
-    margin: 0px 0px;
-}
-a.norm {
-    text-decoration: none;
-    color: white;
-    background: black;
-    font-size: 25px;
-    
-}
-html {
-    scroll-behavior: smooth;
-}
-
-
-p.bottom {
-    font-size: 24px;
-    text-align: center;
-    transform: translateY(400px);
-}
-
-h1 {
-    font-size: 3em;
-    font-family:'Brush Script MT', 'Calibri', 'Sans-Serif';
-}
-
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-p.c{
-    
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
-ul.posts {
-    margin: 20px auto 40px;
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
-}
-
-.scrollmenu{
-    background-color: #333;
-    overflow: auto;
-    white-space: nowrap;
-}
-
-.scrollmenu a{
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-}
-
-.scrollmenu a:hover{
-    background-color: #777;
-}
-
-.img-container {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-}
-
-.box {
-    float: left;
-    width: 33.33%;
-    padding: 50px;
-}
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-/*Clickable images*/
-.modal-content1 {
-    background-color: rgb(255,255,255);
-    margin: auto;
-    border: 1px;
-    height: 20%;
-    position: bottom;
-    background-color: white;
-    padding: 20px;
-    margin-top: 300px;
-    border: 5px solid #aaa;
-    width: 20%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-/* Modal Content */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 90%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    word-wrap: break-all;
-}
-
-.modal-content {
-    background-color: rgb(255,255,255);
-    margin: auto;
-    border: 1px;
-    height: 80%;
-    position: relative;
-    background-color: white;
-    padding: 20px;
-    border: 5px solid #aaa;
-    width: 500px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
-    word-wrap: break-all;
-}
-
-.modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-.modal-body {padding: 2px 16px;}
-
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.myBtn{
-    background: #333;
-    outline-color: black;
-}
-button {
-    background-color: #333;
-    border: none;
-    color: white;
-    padding: 15px 20px 11px 20px;
-    text-align: left;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    cursor: pointer;
-}
-button:hover{
-    background-color: #777;
-}
-
-/* Add Animation */
-@-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
-}
-
-@keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-
-var img = document.getElementById("myImg");
-img.onclick = function() {
-  modal.style.display = "block";
-}
-
-/*add qty*/
-#myform {
-    text-align: center;
-    padding: 5px;
-    border: 1px dotted #ccc;
-    margin: 2%;
-}
-.qty {
-    width: 40px;
-    height: 25px;
-    text-align: center;
-}
-input.qtyplus { width:25px; height:25px;}
-input.qtyminus { width:25px; height:25px;}
-
-a:link {
-    color: white;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:hover {
-    background-color: transparent;
-    text-decoration: underline;
-}
-a:active {
-    background-color: transparent;
-    text-decoration: underline;
-}
-
-/*Chef modals*/
-.Chefmodal {
-    display: none;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 90%; /* Full height */
-     /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    
-}
-
-.Chefmodal-content {
-    background-color: rgb(255,255,255);
-    margin: auto;
-    border: 1px;
-    height: 80%;
-    position: relative;
-    background-color: white;
-    padding: 20px;
-    border: 5px solid #aaa;
-    width: 50%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-/* Chef close */
-.Chefclose {
-    color: #aaaaaa;
-    float: right;
-    font-size: 50px;
-    font-weight: bold;
-}
-
-.Chefclose:hover,
-.Chefclose:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-
-/*General modal */
-/*call button */
-.Callbutton {
-    background-color: black;
-    border: 2px solid deepskyblue;
-    color: white;
-    padding: 30px 90px;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 50px;
-    back
-}
-
-.Callbutton:hover {
-    
-}
-
-.Callmodal {
-    display: none;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 95%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    text-align: center;
-}
-
-.concern{
-    text-align: left;
-    margin: 10px 20px 20px 93px;
-}
-
-.Callmodal-content {
-    background-color: rgb(255,255,255);
-    margin: auto;
-    border: 1px;
-    height: 80%;
-    position: relative;
-    background-color: white;
-    padding: 20px;
-    border: 5px solid #aaa;
-    width: 50%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-
-/* The CallClose Button */
-.Callclose {
-    color: grey;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-.Callclose:hover,
-.Callclose:focus {
-    color: blue;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-
-
-/*Review Button*/
-.Reviewbutton {
-    background-color: black;
-    border: none;
-    color: white;
-    padding: 30px 90px;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    border: 2px solid rgb(100, 250, 73);
-    border-radius: 50px
-}
-
-.Reviewbutton:hover {
-    
-}
-
-.ReviewModal {
-    display: none;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 90%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-/*Review order Modal*/
-.ReviewModal-content {
-    background-color: rgb(255,255,255);
-    margin: auto;
-    border: 1px;
-    position: relative;
-    background-color: white;
-    padding: 20px;
-    border: 5px solid #aaa;
-    width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s
-}
-/* The Review Close Button */
-.Reviewclose {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.Reviewclose:hover,
-.Reviewclose:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-      
-#myform {
-    text-align: left;
-    padding: 5px;
-    border: 1px dotted #ccc;
-    margin: 2%;
-}
-.qty {
-    width: 40px;
-    height: 25px;
-    text-align: center;
-}
-input.qtyplus { width:25px; height:25px;}
-input.qtyminus { width:25px; height:25px;}
-
-/*callstaff modal*/
-/* Customize the label (the container) */
-.container {
-  display: block;
-  position: relative;
-  text-align: left;
-  padding-left: 140px;
-  margin-bottom: 16px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default checkbox */
-.container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-
-/* Create a custom checkbox */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-    margin-left: 93px;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-}
-
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
-  background-color: #2196F3;
-}
-
-/* Create the checkmark/indicator (hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the checkmark/indicator */
-.container .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 3px 3px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
+    background: rgba(247, 247, 247, 0.911);
+    font-family: 'Roboto', sans-serif;
 }
